test/expected/cli/export_readonly_integer.out
== export of a read-only name fails:
shit: 1:24: error: Builtin `export`: 'x' is read-only.
     1 |  readonly x=old; export x=new
       |                         ^~~~~ here.
rc=1
== export of an integer-marked name stores the evaluated value:
7
